[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/images/board.png" type="Texture" id=1]
[ext_resource path="res://assets/images/paper.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/heading.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/images/ships/01-Pinnace.png" type="Texture" id=4]
[ext_resource path="res://prefabs/ship_window/ShipWindow.gd" type="Script" id=5]
[ext_resource path="res://assets/images/buybtn.png" type="Texture" id=6]
[ext_resource path="res://assets/images/buybtn-hover.png" type="Texture" id=7]
[ext_resource path="res://assets/fonts/Ubuntu-Regular.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://assets/images/gold-coins.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 26
font_data = ExtResource( 8 )

[node name="ShipWindow" type="Node2D"]
script = ExtResource( 5 )

[node name="Window" type="Node2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="Body" type="Sprite" parent="Window"]
modulate = Color( 1, 1, 1, 0.705882 )
position = Vector2( 2, 290.5 )
scale = Vector2( 1.19416, 0.727685 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Header" type="Sprite" parent="Window"]
position = Vector2( 0, 23.75 )
scale = Vector2( 1.19174, 0.719178 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = -240.0
margin_right = 235.0
margin_bottom = 50.0
custom_colors/font_color = Color( 1, 0.933333, 0.737255, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Ship"
align = 1
valign = 1

[node name="Tooltip" type="Button" parent="."]
margin_left = -402.0
margin_top = -3.0
margin_right = 403.0
margin_bottom = 52.0
hint_tooltip = "Your ship"
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Content" type="Node2D" parent="."]
position = Vector2( -10, 21 )
__meta__ = {
"_edit_group_": true
}

[node name="Ship" type="Control" parent="Content"]
margin_left = 19.0
margin_top = -1.0
margin_right = 59.0
margin_bottom = 39.0
__meta__ = {
"_edit_group_": true
}

[node name="ShipImage" type="Sprite" parent="Content/Ship"]
position = Vector2( -212, 212 )
texture = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="Content/Ship"]
margin_left = -352.0
margin_top = 68.0
margin_right = -72.0
margin_bottom = 108.0
color = Color( 0, 0, 0, 0.627451 )

[node name="NameLabel" type="Label" parent="Content/Ship"]
margin_left = -352.0
margin_top = 68.0
margin_right = -72.0
margin_bottom = 107.0
custom_colors/font_color = Color( 1, 0.933333, 0.737255, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Ship Type Name"
align = 1
valign = 1

[node name="Tooltip" type="ColorRect" parent="Content/Ship"]
margin_left = -352.0
margin_top = 68.0
margin_right = -72.0
margin_bottom = 317.0
hint_tooltip = "Your ship"
color = Color( 0, 0, 0, 0 )

[node name="HpBar" type="Control" parent="Content"]
margin_left = -324.0
margin_top = 337.0
margin_right = -324.0
margin_bottom = 337.0
__meta__ = {
"_edit_group_": true
}

[node name="BarBg" type="ColorRect" parent="Content/HpBar"]
margin_left = 87.0
margin_top = 3.0
margin_right = 374.0
margin_bottom = 43.0
hint_tooltip = "The ships Hp must be over 30% in order to set sail"
color = Color( 0, 0, 0, 0.705882 )

[node name="BarRedBg" type="ColorRect" parent="Content/HpBar"]
margin_left = 89.0
margin_top = 5.0
margin_right = 372.0
margin_bottom = 41.0
mouse_filter = 2
color = Color( 0.466667, 0, 0, 0.705882 )

[node name="Bar" type="ColorRect" parent="Content/HpBar"]
margin_left = 89.0
margin_top = 5.0
margin_right = 372.0
margin_bottom = 41.0
mouse_filter = 2
color = Color( 0.337255, 0.67451, 0, 0.705882 )

[node name="ValueLabel" type="Label" parent="Content/HpBar"]
margin_left = 87.0
margin_top = 3.0
margin_right = 374.0
margin_bottom = 41.0
custom_colors/font_color = Color( 1, 0.933333, 0.737255, 1 )
custom_fonts/font = ExtResource( 3 )
text = "100/100"
align = 1
valign = 1

[node name="LabelBg" type="ColorRect" parent="Content/HpBar"]
margin_left = -27.0
margin_top = 3.0
margin_right = 74.0
margin_bottom = 42.0
hint_tooltip = "The ships Hp must be over 30% in order to set sail"
color = Color( 0, 0, 0, 0.627451 )

[node name="Label" type="Label" parent="Content/HpBar"]
margin_left = -26.0
margin_top = 3.0
margin_right = 73.0
margin_bottom = 41.0
custom_colors/font_color = Color( 1, 0.933333, 0.737255, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Hp"
align = 1
valign = 1

[node name="CrewBar" type="Control" parent="Content"]
margin_left = -324.0
margin_top = 383.0
margin_right = -324.0
margin_bottom = 383.0
__meta__ = {
"_edit_group_": true
}

[node name="BarBg" type="ColorRect" parent="Content/CrewBar"]
margin_left = 87.0
margin_top = 3.0
margin_right = 374.0
margin_bottom = 43.0
hint_tooltip = "Your ship must have at least half the crew in order to set sail"
color = Color( 0, 0, 0, 0.705882 )
__meta__ = {
"_editor_description_": "Only with a full crew you can set sail"
}

[node name="BarRedBg" type="ColorRect" parent="Content/CrewBar"]
margin_left = 89.0
margin_top = 5.0
margin_right = 372.0
margin_bottom = 41.0
mouse_filter = 2
color = Color( 0.466667, 0, 0, 0.705882 )

[node name="Bar" type="ColorRect" parent="Content/CrewBar"]
margin_left = 89.0
margin_top = 5.0
margin_right = 372.0
margin_bottom = 41.0
mouse_filter = 2
color = Color( 0, 0.54902, 0.67451, 0.705882 )

[node name="ValueLabel" type="Label" parent="Content/CrewBar"]
margin_left = 87.0
margin_top = 3.0
margin_right = 374.0
margin_bottom = 41.0
custom_colors/font_color = Color( 1, 0.933333, 0.737255, 1 )
custom_fonts/font = ExtResource( 3 )
text = "100/100"
align = 1
valign = 1

[node name="LabelBg" type="ColorRect" parent="Content/CrewBar"]
margin_left = -27.0
margin_top = 3.0
margin_right = 74.0
margin_bottom = 42.0
hint_tooltip = "Your ship must have at least half the crew in order to set sail"
color = Color( 0, 0, 0, 0.627451 )
__meta__ = {
"_editor_description_": "Only with a full crew you can set sail"
}

[node name="Label" type="Label" parent="Content/CrewBar"]
margin_left = -26.0
margin_top = 3.0
margin_right = 73.0
margin_bottom = 41.0
custom_colors/font_color = Color( 1, 0.933333, 0.737255, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Crew"
align = 1
valign = 1

[node name="CargoBar" type="Control" parent="Content"]
margin_left = -324.0
margin_top = 429.0
margin_right = -324.0
margin_bottom = 429.0
__meta__ = {
"_edit_group_": true
}

[node name="BarBg" type="ColorRect" parent="Content/CargoBar"]
margin_left = 87.0
margin_top = 3.0
margin_right = 374.0
margin_bottom = 43.0
hint_tooltip = "Your ship's cargo"
color = Color( 0, 0, 0, 0.705882 )
__meta__ = {
"_editor_description_": "Your ship's cargo"
}

[node name="BarRedBg" type="ColorRect" parent="Content/CargoBar"]
margin_left = 89.0
margin_top = 5.0
margin_right = 372.0
margin_bottom = 41.0
mouse_filter = 2
color = Color( 0.301961, 0.211765, 0, 0.705882 )

[node name="Bar" type="ColorRect" parent="Content/CargoBar"]
margin_left = 89.0
margin_top = 5.0
margin_right = 372.0
margin_bottom = 41.0
mouse_filter = 2
color = Color( 0.67451, 0.568627, 0, 0.705882 )

[node name="ValueLabel" type="Label" parent="Content/CargoBar"]
margin_left = 87.0
margin_top = 3.0
margin_right = 374.0
margin_bottom = 41.0
custom_colors/font_color = Color( 1, 0.933333, 0.737255, 1 )
custom_fonts/font = ExtResource( 3 )
text = "100/100"
align = 1
valign = 1

[node name="LabelBg" type="ColorRect" parent="Content/CargoBar"]
margin_left = -27.0
margin_top = 3.0
margin_right = 74.0
margin_bottom = 42.0
hint_tooltip = "Your ship's cargo"
color = Color( 0, 0, 0, 0.627451 )
__meta__ = {
"_editor_description_": "Your ship's cargo"
}

[node name="Label" type="Label" parent="Content/CargoBar"]
margin_left = -26.0
margin_top = 3.0
margin_right = 73.0
margin_bottom = 41.0
custom_colors/font_color = Color( 1, 0.933333, 0.737255, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Cargo"
align = 1
valign = 1

[node name="Upkeep" type="Control" parent="Content"]
margin_left = 31.0
margin_top = -150.0
margin_right = 71.0
margin_bottom = -110.0
__meta__ = {
"_edit_group_": true
}

[node name="Bg" type="ColorRect" parent="Content/Upkeep"]
margin_left = -50.0
margin_top = 273.0
margin_right = 147.0
margin_bottom = 312.0
hint_tooltip = "The cost to repair one Hp point"
color = Color( 0, 0, 0, 0.627451 )

[node name="Label" type="Label" parent="Content/Upkeep"]
margin_left = -50.0
margin_top = 273.0
margin_right = 147.0
margin_bottom = 311.0
custom_colors/font_color = Color( 1, 0.933333, 0.737255, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Upkeep: 320"
align = 1
valign = 1

[node name="Speed" type="Control" parent="Content"]
margin_left = 31.0
margin_top = -98.0
margin_right = 71.0
margin_bottom = -58.0
__meta__ = {
"_edit_group_": true
}

[node name="Bg" type="ColorRect" parent="Content/Speed"]
margin_left = -50.0
margin_top = 273.0
margin_right = 147.0
margin_bottom = 312.0
hint_tooltip = "Higher speed means less days sailing"
color = Color( 0, 0, 0, 0.627451 )

[node name="Label" type="Label" parent="Content/Speed"]
margin_left = -49.0
margin_top = 273.0
margin_right = 147.0
margin_bottom = 311.0
custom_colors/font_color = Color( 1, 0.933333, 0.737255, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Speed: 11"
align = 1
valign = 1

[node name="Repair" type="Control" parent="Content"]
margin_left = 404.0
margin_top = 4.0
margin_right = 444.0
margin_bottom = 44.0
__meta__ = {
"_edit_group_": true
}

[node name="RepairBtn" type="TextureButton" parent="Content/Repair"]
margin_left = -342.0
margin_top = 338.0
margin_right = -207.0
margin_bottom = 375.0
hint_tooltip = "Repair the ship's Hp"
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 7 )

[node name="BtnLabel" type="Label" parent="Content/Repair"]
margin_left = -335.0
margin_top = 336.0
margin_right = -222.0
margin_bottom = 372.0
custom_colors/font_color = Color( 1, 0.933333, 0.737255, 1 )
custom_fonts/font = SubResource( 1 )
text = "Repair"
align = 1
valign = 1

[node name="RepairBg" type="ColorRect" parent="Content/Repair"]
margin_left = -199.0
margin_top = 337.0
margin_right = -39.0
margin_bottom = 376.0
hint_tooltip = "Repair cost to fully repair your ship"
color = Color( 0, 0, 0, 0.627451 )
__meta__ = {
"_editor_description_": "Cost to fully repair your ship"
}

[node name="Sprite" type="Sprite" parent="Content/Repair"]
position = Vector2( -178, 357 )
scale = Vector2( 0.590909, 0.590909 )
texture = ExtResource( 11 )

[node name="CostLabel" type="Label" parent="Content/Repair"]
margin_left = -162.0
margin_top = 338.0
margin_right = -41.0
margin_bottom = 374.0
custom_colors/font_color = Color( 1, 0.933333, 0.737255, 1 )
custom_fonts/font = SubResource( 1 )
text = "5000"
valign = 1

[node name="Hire" type="Control" parent="Content"]
margin_left = 404.0
margin_top = 52.0
margin_right = 444.0
margin_bottom = 92.0
__meta__ = {
"_edit_group_": true
}

[node name="HireBtn" type="TextureButton" parent="Content/Hire"]
margin_left = -342.0
margin_top = 338.0
margin_right = -207.0
margin_bottom = 373.0
hint_tooltip = "Hire crew"
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 7 )

[node name="Label" type="Label" parent="Content/Hire"]
margin_left = -336.0
margin_top = 336.0
margin_right = -222.0
margin_bottom = 372.0
custom_colors/font_color = Color( 1, 0.933333, 0.737255, 1 )
custom_fonts/font = SubResource( 1 )
text = "Hire"
align = 1
valign = 1

[node name="HireBg" type="ColorRect" parent="Content/Hire"]
margin_left = -199.0
margin_top = 337.0
margin_right = -39.0
margin_bottom = 376.0
hint_tooltip = "Hire cost to refill your crew"
color = Color( 0, 0, 0, 0.627451 )
__meta__ = {
"_editor_description_": "Hire cost to refill your crew"
}

[node name="Sprite" type="Sprite" parent="Content/Hire"]
position = Vector2( -178, 357 )
scale = Vector2( 0.590909, 0.590909 )
texture = ExtResource( 11 )

[node name="CostLabel" type="Label" parent="Content/Hire"]
margin_left = -162.0
margin_top = 338.0
margin_right = -41.0
margin_bottom = 374.0
custom_colors/font_color = Color( 1, 0.933333, 0.737255, 1 )
custom_fonts/font = SubResource( 1 )
text = "5000"
valign = 1

[connection signal="button_up" from="Content/Repair/RepairBtn" to="." method="_on_RepairBtn_button_up"]
[connection signal="button_up" from="Content/Hire/HireBtn" to="." method="_on_HireBtn_button_up"]
